# openGL-boxes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Box.hpp  Camera.hpp  Draw.hpp  Shader.hpp  Window.hpp
resources/shader_sources/: texture.fs
src/: Box.cpp  Camera.cpp  Draw.cpp  Shader.cpp  Stb_image.cpp  Window.cpp  main.cpp
